Fix: profile dropdown - remove KYC button, fix align on different languages, fit length (#236)

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -141,6 +141,7 @@
                     color: var(--navbar-language-selector-color);
                     background-color: var(--navbar-language-selector-background);
                     height: calc(var(--big-gap) * 0.7);
+                    min-width: calc(var(--big-gap) * 1.9);
                     display: flex;
                     justify-content: flex-start;
                     text-align: left;
@@ -151,7 +152,7 @@
                         padding-top: calc(var(--gap) * 2.1);
                         padding-bottom: calc(var(--gap) * 2.1) ;
                         padding-left: calc(var(--big-gap) * 0.2);
-                        padding-right: calc(var(--big-gap) * 0.95);
+                        padding-right: calc(var(--big-gap) * 0.5);
                         text-decoration: none;
                         color: var(--navbar-language-selector-color);
                         font-size: calc(var(--big-gap) * 0.23);
@@ -186,7 +187,7 @@
                 padding: 0;
                 border: 0;
                 overflow: hidden;
-                margin-left: calc(var(--big-gap) * -.45);
+                right: calc(var(--big-gap) * -.6);
             }
 
             .dropdown-menu-language {
